--- a/index.html
+++ b/index.html
@@ -205,7 +205,10 @@
             </a>
             <a href="https://en.wikipedia.org/wiki/The_Witches_(novel)" target="_blank">
               <i class="fa fa-broom"></i>
-            </a>            
+            </a>
+            <a href="doc/resume.pdf" target="_blank">
+              <i class="fa fa-file-pdf"></i>
+            </a>              
           </div>
         </div>
 
