add friend finder

--- a/index.html
+++ b/index.html
@@ -160,6 +160,20 @@
                     </div>
                 </div>
           </div>
+          <div class="slide" id="slide5">
+            <div class="card-deck mx-5 my-5 card-div">
+                <div class="card bg-light">
+                    <!-- <img class="card-img-top card-pic mx-auto" src="./img/scissors.svg" alt=""> -->
+                    <h1 class="text-center"><span class="fa fa-binoculars"></span></h1>
+                    <div class="card-body border">
+                      <h3 class="card-title">Friend Finder</h3>
+                      <h4 class="card-text">A fullstack app to find a friend with the closest matching survey answers.</h4>
+                      <a href="https://serene-gorge-83435.herokuapp.com/" target="_blank" class="btn btn-info">Take Survey</a>
+                      <p class="card-text"><small class="text-muted">Node.Js | Express</small></p>
+                    </div>
+                  </div>
+              </div>
+        </div>
           </div>
           <div class="col-1"></div>
         </div>
