--- a/index.html
+++ b/index.html
@@ -174,6 +174,20 @@
                   </div>
               </div>
         </div>
+        <div class="slide" id="slide6">
+          <div class="card-deck mx-5 my-5 card-div">
+              <div class="card bg-light">
+                  <!-- <img class="card-img-top card-pic mx-auto" src="./img/scissors.svg" alt=""> -->
+                  <h1 class="text-center"><span class="fa fa-bars"></span></h1>
+                  <div class="card-body border">
+                    <h3 class="card-title">Burger</h3>
+                    <h4 class="card-text">A fullstack app to order Burgers.</h4>
+                    <a href="https://tranquil-castle-20899.herokuapp.com/" target="_blank" class="btn btn-info">Order Food</a>
+                    <p class="card-text"><small class="text-muted">Node.Js | Express | MySQL | Handlebars.js</small></p>
+                  </div>
+                </div>
+            </div>
+      </div>
           </div>
           <div class="col-1"></div>
         </div>
